src/test/ui/issues/issue-75907_b.stderr
error[E0532]: expected tuple struct or tuple variant, found struct `Bar`
  --> $DIR/issue-75907_b.rs:9:9
   |
LL |     let Bar(x, y, z) = make_bar();
   |         ^^^ constructor is not visible here due to private fields

error: aborting due to previous error

For more information about this error, try `rustc --explain E0532`.
